# oath-uri

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  README.md
liboathuri/: oathuri.h  urigen.c
man/: oathuri.1  oathuri.h.3  oathuri_hotp_generate.3
oathuri/: oathuri.c
scripts/: testPage.py
